# mineru-web-service

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: config.py  database.py  models.py  schemas.py
backend/app/routers/: files.py
backend/app/services/: mineru.py  storage.py
docs/: bbox-coordinate-alignment.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: index.ts
frontend/src/components/: ContentViewer.tsx  ContentViewerV2.tsx  ImageViewer.tsx  JsonViewer.tsx  PDFViewer.tsx  PDFViewerV2.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/pages/: HomePage.tsx  TaskDetailPage.tsx  TaskListPage.tsx
frontend/src/utils/: parseMiddleJson.ts
